# jsonrpc-rs

./: Cargo.toml  README.md
benches/: rpc_benchmark.rs
criterion/blocking pingpong/base/: benchmark.json  estimates.json  sample.json  tukey.json
criterion/blocking pingpong/change/: estimates.json
criterion/blocking pingpong/report/: index.html
criterion/report/: index.html
criterion/timeout pingpong/change/: estimates.json
criterion/timeout pingpong/new/: benchmark.json  estimates.json  sample.json  tukey.json
criterion/timeout pingpong/report/: index.html
src/: callback.rs  channel.rs  client.rs  lib.rs  object.rs  result.rs  server.rs
src/client/: recv.rs  send.rs  user_event.rs
src/server/: handler.rs  session.rs
src/timer/: mod.rs  timerwheel.rs
tests/: pingpong.rs
