[package]
name = "jsonrpc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.147", features = ["derive"] }
serde_json = "^1.0"
thiserror = "1.0.38"
anyhow = "1.0.68"
log = "0.4.16"
futures = {version = "0.3.25",features = ["thread-pool"]}
once_cell = "1.17.0"
completeq-rs = {git="https://github.com/AgoraCyber/completeq-rs.git"}
async-timer-rs = {git="https://github.com/AgoraCyber/async-timer.git"}

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
async-std = {version = "1.11.0", features = ["attributes", "default"]}
criterion = {version = "0.4", features = ["async_futures", "html_reports"]}


[[bench]]
harness = false
name = "rpc_benchmark"