[package]
name = "jsonrpc-rs"
version = "0.1.3"
edition = "2021"
license-file = "LICENSE"
keywords = ["futures-rs", "async","timeout","jsonrpc"]
description = "Futures base jsonrpc server/client framework"
documentation = "https://docs.rs/jsonrpc-rs"
readme = "README.md"
homepage = "https://github.com/AgoraCyber/jsonrpc-rs"
repository = "https://github.com/AgoraCyber/jsonrpc-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.147", features = ["derive"] }
serde_json = "^1.0"
thiserror = "1.0.38"
anyhow = "1.0.68"
log = "0.4.16"
futures = {version = "0.3.25",features = ["thread-pool"]}
once_cell = "1.17.0"
completeq-rs = "^0.1"
async-timer-rs = "^0.1"
bytes = "1.3.0"

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
async-std = {version = "1.11.0", features = ["attributes", "default"]}
criterion = {version = "0.4", features = ["async_futures", "html_reports"]}


[[bench]]
harness = false
name = "rpc_benchmark"